es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
    role: client
spec:
  selector:
    component: elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: elasticsearch.internal.jesses.io
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
