kibana-external-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-external
  namespace: logging
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    traefik.frontend.redirect.replacement: https://$1
    # ingress.kubernetes.io/auth-type: basic
    # ingress.kubernetes.io/auth-secret: dashboard-auth
spec:
  rules:
  - host: kibana.jesses.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
